--- a/digital/src/main/resources/static/index.html
+++ b/digital/src/main/resources/static/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body>
-    <h1>Benvenuti al modulo Digital del JobLab Accenture</h1>
+<body>      
+    <div id="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+      
     <p>cliccate sui pulsanti sotto per vedere i dati restituiti dal back-end</p>
 
     <details id="btnCars">
@@ -82,5 +88,6 @@
         ["Cars", "Techs", "Clothes"].forEach(type => addToggleEventToDetail(type));
     </script>
 </body>
-
+  
+  
 </html>
