--- a/digital/src/main/resources/static/index.html
+++ b/digital/src/main/resources/static/index.html
@@ -25,28 +25,27 @@
 
     <div id="navbar" class="sticky">
         <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
         <a href="#about">About</a>
+        <a href="#contact">Contact</a>
     </div>
     
      <br>
      <br>
-    <h1>
+    <h1 class="alignCenter">
         Auto in vendita
         <div id="btnCars"><code id="resultCars"></code></div>
     </h1>
-    <h1>
+    <h1 class="alignCenter">
         Vestiti in vendita
         <div id="btnClothes"><code id="resultClothes"></code></div>
     </h1>
-    <h1>
+    <h1 class="alignCenter">
         Gadget in vendita
         <div id="btnTechs"><code id="resultTechs"></code></div>
     </h1>
 
 
-    <p>sotto invece alcuni suggerimenti su come creare</p>
+    <!-- <p>sotto invece alcuni suggerimenti su come creare</p>
     <details>
         <summary>una barra di navigazione</summary>
         <p><a href="https://www.w3schools.com/howto/howto_js_topnav.asp"> Superiore (Top Navigation)</a></p>
@@ -62,7 +61,7 @@
         <summary>una dialog di dettagli</summary>
         <p><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dialog">Riferimento MDN</a></p>
     </details>
-    </div>
+    </div> -->
     <script type="module">
         import fetch from './js/fetch.js';
 
