--- a/digital/src/main/resources/static/contact.html
+++ b/digital/src/main/resources/static/contact.html
@@ -121,6 +121,19 @@
         //Applico la logica di chiamata ed esposizione per tutti i 3 tipi di servizio che ho a disposizione
         ["Cars", "Techs", "Clothes"].forEach(type => addToggleEventToDetail(type));
     </script> -->
+
+    <h1>Contacts</h1>
+
+<div class="contacts">
+<p>Via Giambattista Moschini, 11</p>
+<p>37129 Verona VR</p>
+<p>&#127760 <a href="https://www.istitutoeinstein.edu.it/">https://www.istitutoeinstein.edu.it/</a></p>
+<p>&#128222 0458348772</p>
+</div>
+
+<div class="mappa">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2806.2748714321638!2d12.03145017671811!3d45.302872844187696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477ec1abee8d1777%3A0x8c1d121b8840e1c9!2sIIS%20Albert%20Einstein!5e0!3m2!1sit!2sit!4v1711363166338!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 </body>
 
 </html>
