--- a/digital/src/main/resources/static/index.html
+++ b/digital/src/main/resources/static/index.html
@@ -12,8 +12,10 @@
 <body>
     <div class="sidebar bar-block" style="width:25%">
         <img src="https://i.imgur.com/qv9eCmx.png" alt="icona" width="100" height="100">
-        
-        <p>nome cognome</p>
+        <br>
+        <i>mimi debugger</i>
+        <br>
+        <i>Last activity 25/03/2024</i>
         <br>
         <p id="date"> 
         
