--- a/digital/src/main/resources/static/index.html
+++ b/digital/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="sidebar bar-block" style="width:25%">
-        <img src="https://i.imgur.com/qv9eCmx.png" alt="icona" width="100" height="100">
+        <img src="https://i.imgur.com/E4xECeU.png" alt="icona" height="100">
         <br>
         <i>mimi debugger</i>
         <br>
