--- a/digital/src/main/resources/static/contact.html
+++ b/digital/src/main/resources/static/contact.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="sidebar bar-block" style="width:25%">
-        <img src="https://i.imgur.com/E4xECeU.png" alt="icona" height="100">
+    <div class="sidebar bar-block" style="width:15%">
+        <img src="https://i.imgur.com/E4xECeU.png" style="padding-top: 10px" alt="icona" height="100">
         <br>
         <i>mimi debugger</i>
         <br>
@@ -23,7 +23,7 @@
         </script>
         
     </div>
-    <div style="margin-left:25%">
+    <div style="margin-left:15%">
 
         <div id="navbar" class="sticky">
             <a href="index.html">Home</a>
